links all fixed with adequate spacing

--- a/hello.css
+++ b/hello.css
@@ -33,11 +33,11 @@ h1 {
 
 .bottom {
         border-top: 1px solid white;
-        height: 200px;
+        height: 180px;
 }
 
 .main {
-        height: 200px;
+        height: 400px;
 }
 
 .info {
@@ -45,3 +45,6 @@ h1 {
         width: 20%;
         font-size: 10px;
 }
+
+a {
+        color: black;
